<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_linkedin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            app:layout_constraintStart_toStartOf="@id/btn_aboutMe"
            app:layout_constraintEnd_toEndOf="@id/btn_aboutMe"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name" />
        <Button
            android:id="@+id/btn_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/github"
            app:layout_constraintStart_toStartOf="@id/btn_aboutMe"
            app:layout_constraintEnd_toEndOf="@id/btn_aboutMe"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/btn_linkedin" />
        <Button
            android:id="@+id/btn_aboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/btn_github" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>