<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/lyt_root"
        android:layout_width="match_parent"
        android:background="@drawable/bg_notification_history"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?attr/actionBarSize">


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fitsSystemWindows="false"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ic_drag"
                            android:layout_width="60dp"
                            android:layout_height="15dp"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:tint="#f6f6f9"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_menu" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/lyt_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/txt_expertise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/txt_about_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_expertise"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/txt_work_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_about_me"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/txt_skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_work_experience"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>